--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.35",
+    "vue-router": "^4.4.5",
     "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
