--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "vue": "^3.4.35",
     "vue-router": "^4.4.5",
+    "vue3-leaflet": "^1.0.50",
     "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
